--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 NODE_ENV=development
-MONGO_URI=mongodb+srv://manhattan:rootroot@cinema.lssbofr.mongodb.net/?retryWrites=true&w=majority
+MONGO_URI=mongodb+srv://manhattan:rootroot@cinema.nzssy3t.mongodb.net/?retryWrites=true&w=majority
 JWT_SECRET=2323232sdsd22asa
