--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "class-validator": "^0.14.0",
     "class-validator-mongo-object-id": "^1.3.0",
     "i": "^0.3.7",
+    "jwt-decode": "^3.1.2",
     "mongoose": "^6.9.0",
     "npm": "^9.4.0",
     "passport": "^0.6.0",
